Resolved sonarqube quality gate issues

--- a/templates/conduit.html
+++ b/templates/conduit.html
@@ -109,7 +109,7 @@
                         </span> 
                     </div>
                     
-                    <div ng-if="articles[currentIndex].images.length == 0" style="text-align:center"><b>No image to show.</b></div>
+                    <div ng-if="articles[currentIndex].images.length == 0" style="text-align:center"><strong>No image to show.</strong></div>
                     
                     <div class="text-wrapper">
                         <div 	class="text" 
@@ -278,7 +278,7 @@
                                                         class="pointer-on-hover"
                                                         title="Filter options">
                                     <div>
-                                        <i class="glyphicon" ng-class="{'glyphicon-chevron-up': status.open, 'glyphicon-chevron-down': !status.open}"></i>
+                                        <em class="glyphicon" ng-class="{'glyphicon-chevron-up': status.open, 'glyphicon-chevron-down': !status.open}"></em>
                                     </div>
                                 </uib-accordion-heading>
                                 
